tests/fail/assert_no_arg.avm
; assert with no arguments
assert
assert;int8(16)
assert ;int8(16)
